--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -27,6 +27,12 @@
 	  </button>
     </div>
   </div>
-  <div class="header__body body-header"></div>
+  <div class="header__body body-header">
+	<div class="body-header__container">
+		 <div class="body-header__container">
+			<a class="body-header__logo" href=""></a>
+		 </div>
+	</div>
+  </div>
   <div class="header__catalog catalog-header"></div>
 </header>
